--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,47 @@
             <div class="header-style">
                 <nav class="header-navbar">
                     <a href="/" class="header-navbar__logo">Web<span>Studio</span></a>
+                    <button class="header-navbar__buttons" type="button" aria-expanded="false" aria-controls="header-navbar-menu__container"
+                        data-menu-button>
+                        <svg width=40px height=40px aria-label="Переключатель мобильного меню">
+                            <use class="header-navbar__icon-menu" href="./images/icons.svg#icon-menu"></use>
+                            <use class="header-navbar__icon-cross" href="./images/icons.svg#icon-close-black"></use>
+                        </svg>
+                    </button>
+                    <div class="header-navbar-menu__container" id="header-navbar-menu__container" data-menu>
+                        <ul class="header-navbar-menu__boxes">
+                            <li class="header-navbar-menu__item header-navbar-menu__item--uactive">
+                                <a href="#"
+                                    class="header-navbar-menu__link header-navbar-menu__link--underline header-navbar-menu__link--active">Студия</a>
+                            </li>
+                            <li class="header-navbar-menu__item">
+                                <a href="portfolio.html" class="header-navbar-menu__link header-navbar-menu__link--underline">Портфолио</a>
+                            </li>
+                            <li class="header-navbar-menu__item">
+                                <a href="#" class="header-navbar-menu__link header-navbar-menu__link--underline">Контакты</a>
+                            </li>
+                            <li class="header-navbar__item">
+                                <a href="mailto:info@devstudio.com" class="header-navbar__link">info@devstudio.com</a>
+                            </li>
+                            <li class="header-navbar__item">
+                                <a href="tel:+380961111111" class="header-navbar__link">+38 096 111 11 11</a>
+                            </li>
+                        </ul>
+                        <ul class="header-navbar-menu__socials-list">
+                            <li class="header-navbar-menu__socials-list">
+                                <a href="#" class="header-navbar-menu__socials-link">Instagram</a>
+                            </li>
+                            <li class="header-navbar-menu__socials-list">
+                                <a href="#" class="header-navbar-menu__socials-link">Twitter</a>
+                            </li>
+                            <li class="header-navbar-menu__socials-list">
+                                <a href="#" class="header-navbar-menu__socials-link">Facebook</a>
+                            </li>
+                            <li class="header-navbar-menu__socials-list">
+                                <a href="#" class="header-navbar-menu__socials-link">LinkedIn</a>
+                            </li>
+                        </ul>
+                    </div>
                     <ul class="header-navbar__boxes">
                         <li class="header-navbar__item"><a href="index.html" class="header-navbar__link header-navbar__link--underline">Студия</a></li>
                         <li class="header-navbar__item header-navbar__item--uactive"><a href="#" class="header-navbar__link header-navbar__link--underline header-navbar__link--active">Портфолио</a></li>
