--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
                             <use class="header-navbar__icon-cross" href="./images/icons.svg#icon-close-black"></use>
                         </svg>
                     </button>
-                    <div class="header-navbar-menu__container" id="header-navbar-menu__container" data-menu>
+                    <!-- <div class="header-navbar-menu__container" id="header-navbar-menu__container" data-menu>
                         <ul class="header-navbar-menu__boxes">
                             <li class="header-navbar-menu__item header-navbar-menu__item--uactive">
                                 <a href="#"
@@ -62,7 +62,7 @@
                                 <a href="#" class="header-navbar-menu__socials-link">LinkedIn</a>
                             </li>
                         </ul>
-                    </div>
+                    </div> -->
                     <ul class="header-navbar__boxes">
                         <li class="header-navbar__item"><a href="index.html" class="header-navbar__link header-navbar__link--underline">Студия</a></li>
                         <li class="header-navbar__item header-navbar__item--uactive"><a href="#" class="header-navbar__link header-navbar__link--underline header-navbar__link--active">Портфолио</a></li>
@@ -70,15 +70,15 @@
                     </ul>
                 </nav>
                 <ul class="header-adress">
-                    <li class="header-navbar__item">
-                        <a href="mailto:info@devstudio.com" class="header-navbar__link">info@devstudio.com
+                    <li class="header-navbar__item header-navbar__item-tablet">
+                        <a href="mailto:info@devstudio.com" class="header-navbar__link header-navbar__link--grey-color">info@devstudio.com
                             <svg width=16px height=12px>
                                 <use href="./images/icons.svg#icon-mail"></use>
                             </svg>
                         </a>
                     </li>
                     <li class="header-navbar__item">
-                        <a href="tel:+380961111111" class="header-navbar__link">+38 096 111 11 11
+                        <a href="tel:+380961111111" class="header-navbar__link header-navbar__link--grey-color">+38 096 111 11 11
                             <svg width=10px height=16px>
                                 <use href="./images/icons.svg#icon-smartphone"></use>
                             </svg>
@@ -110,7 +110,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio1.jpg" alt="Ноутбук" width="370" height="294"/>
+                                <picture>
+                                    <source srcset="./images/img_portfolio1-desk-370@1x.jpg 1x, ./images/img_portfolio1-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio1-tab-354@1x.jpg 1x, ./images/img_portfolio1-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio1-mob-450@1x.jpg 1x, ./images/img_portfolio1-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio1-mob-450@1x.jpg" alt="Ноутбук" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
                                 </div>
@@ -124,7 +129,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio2.jpg" alt="Баскетболисты" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/img_portfolio2-desk-370@1x.jpg 1x, ./images/img_portfolio2-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio2-tab-354@1x.jpg 1x, ./images/img_portfolio2-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio2-mob-450@1x.jpg 1x, ./images/img_portfolio2-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio2-mob-450@1x.jpg" alt="Баскетболисты" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate aut a, earum similique sed delectus odit dolor illum.</p>
                                 </div>
@@ -137,8 +147,13 @@
                     </li>
                     <li class="categories__item">
                         <a href="#" class="categories__link">
-                            <div class="categories__overlay-box">                           
-                                <img class="categories__img" src="./images/img_portfolio3.jpg" alt="Лого ресторана морепродуктов" width="370" height="294" />
+                            <div class="categories__overlay-box">
+                                <picture>
+                                    <source srcset="./images/img_portfolio3-desk-370@1x.jpg 1x, ./images/img_portfolio3-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio3-tab-354@1x.jpg 1x, ./images/img_portfolio3-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio3-mob-450@1x.jpg 1x, ./images/img_portfolio3-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio3-mob-450@1x.jpg" alt="Лого ресторана морепродуктов" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate
                                         aut a, earum similique sed delectus odit dolor illum.</p>
@@ -153,7 +168,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio4.jpg" alt="Наушники" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/img_portfolio4-desk-370@1x.jpg 1x, ./images/img_portfolio4-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio4-tab-354@1x.jpg 1x, ./images/img_portfolio4-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio4-mob-450@1x.jpg 1x, ./images/img_portfolio4-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio4-mob-450@1x.jpg" alt="Наушники" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate
                                         aut a, earum similique sed delectus odit dolor illum.</p>
@@ -168,7 +188,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio5.jpg" alt="Картонные коробки" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/img_portfolio5-desk-370@1x.jpg 1x, ./images/img_portfolio5-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio5-tab-354@1x.jpg 1x, ./images/img_portfolio5-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio5-mob-450@1x.jpg 1x, ./images/img_portfolio5-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio5-mob-450@1x.jpg" alt="Картонные коробки" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate
                                         aut a, earum similique sed delectus odit dolor illum.</p>
@@ -183,7 +208,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio6.jpg" alt="Моноблок" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/img_portfolio6-desk-370@1x.jpg 1x, ./images/img_portfolio6-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio6-tab-354@1x.jpg 1x, ./images/img_portfolio6-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio6-mob-450@1x.jpg 1x, ./images/img_portfolio6-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio6-mob-450@1x.jpg" alt="Моноблок" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate
                                         aut a, earum similique sed delectus odit dolor illum.</p>
@@ -198,7 +228,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio7.jpg" alt="Открытая книга" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/img_portfolio7-desk-370@1x.jpg 1x, ./images/img_portfolio7-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio7-tab-354@1x.jpg 1x, ./images/img_portfolio7-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio7-mob-450@1x.jpg 1x, ./images/img_portfolio7-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio7-mob-450@1x.jpg" alt="Открытая книга" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate
                                         aut a, earum similique sed delectus odit dolor illum.</p>
@@ -213,7 +248,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio8.jpg" alt="Бирка-визитка" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/img_portfolio8-desk-370@1x.jpg 1x, ./images/img_portfolio8-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio8-tab-354@1x.jpg 1x, ./images/img_portfolio8-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio8-mob-450@1x.jpg 1x, ./images/img_portfolio8-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio8-mob-450@1x.jpg" alt="Бирка-визитка" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate
                                         aut a, earum similique sed delectus odit dolor illum.</p>
@@ -228,7 +268,12 @@
                     <li class="categories__item">
                         <a href="#" class="categories__link">
                             <div class="categories__overlay-box">
-                                <img class="categories__img" src="./images/img_portfolio9.jpg" alt="Работа на ноутбуке" width="370" height="294" />
+                                <picture>
+                                    <source srcset="./images/img_portfolio9-desk-370@1x.jpg 1x, ./images/img_portfolio9-desk-740@2x.jpg 2x" media="(min-width: 1200px)" />
+                                    <source srcset="./images/img_portfolio9-tab-354@1x.jpg 1x, ./images/img_portfolio9-tab-708@2x.jpg 2x" media="(min-width: 768px)" />
+                                    <source srcset="./images/img_portfolio9-mob-450@1x.jpg 1x, ./images/img_portfolio9-mob-900@2x.jpg 2x" media="(min-width: 480px)" />
+                                    <img class="categories__img" src="./images/img_portfolio9-mob-450@1x.jpg" alt="Работа на ноутбуке" />
+                                </picture>
                                 <div class="categories__overlay-shade">
                                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas quos itaque facere atque deserunt neque cupiditate
                                         aut a, earum similique sed delectus odit dolor illum.</p>
@@ -311,6 +356,43 @@
             </div>
         </div>
     </footer>
+    <!-- =============================== Navbar menu ================================= -->
+    <div class="header-navbar-menu__container" id="header-navbar-menu__container" data-menu>
+        <ul class="header-navbar-menu__boxes">
+            <li class="header-navbar-menu__item">
+                <a href="#" class="header-navbar-menu__link">Студия</a>
+            </li>
+            <li class="header-navbar-menu__item">
+                <a href="portfolio.html" class="header-navbar-menu__link">Портфолио</a>
+            </li>
+            <li class="header-navbar-menu__item">
+                <a href="#" class="header-navbar-menu__link">Контакты</a>
+            </li>
+            <li class="header-navbar-menu__item">
+                <a href="mailto:info@devstudio.com"
+                    class="header-navbar-menu__link header-navbar-menu__link--grey-color">info@devstudio.com</a>
+            </li>
+            <li class="header-navbar-menu__item">
+                <a href="tel:+380961111111" class="header-navbar-menu__link header-navbar-menu__link--grey-color">+38 096
+                    111 11 11</a>
+            </li>
+        </ul>
+        <ul class="header-navbar-menu__socials">
+            <li class="header-navbar-menu__socials-list">
+                <a href="#" class="header-navbar-menu__socials-link">Instagram</a>
+            </li>
+            <li class="header-navbar-menu__socials-list">
+                <a href="#" class="header-navbar-menu__socials-link">Twitter</a>
+            </li>
+            <li class="header-navbar-menu__socials-list">
+                <a href="#" class="header-navbar-menu__socials-link">Facebook</a>
+            </li>
+            <li class="header-navbar-menu__socials-list">
+                <a href="#" class="header-navbar-menu__socials-link">LinkedIn</a>
+            </li>
+        </ul>
+    </div>
+    <script src="./js/menu.js"></script>
 </body>
 
 </html>
