fix hero bg links

--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@
     <div class="header-navbar-menu__container" id="header-navbar-menu__container" data-menu>
         <ul class="header-navbar-menu__boxes">
             <li class="header-navbar-menu__item">
-                <a href="#" class="header-navbar-menu__link">Студия</a>
+                <a href="index.html" class="header-navbar-menu__link">Студия</a>
             </li>
             <li class="header-navbar-menu__item">
                 <a href="portfolio.html" class="header-navbar-menu__link">Портфолио</a>
