--- a/portfolio.html
+++ b/portfolio.html
@@ -21,7 +21,7 @@
         <div class="container">
             <div class="header-style">
                 <nav class="header-navbar">
-                    <a href="/" class="header-navbar__logo">Web<span>Studio</span></a>
+                    <a href="index.html" class="header-navbar__logo">Web<span>Studio</span></a>
                     <button class="header-navbar__buttons" type="button" aria-expanded="false" aria-controls="header-navbar-menu__container"
                         data-menu-button>
                         <svg width=40px height=40px aria-label="Переключатель мобильного меню">
